--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main page</title>
+    <title>Main page to enter the site</title>
     <style>
         body{
             background-image: url('main-bg2.jpg');
@@ -35,6 +35,7 @@
     </style>
 </head>
 <body>
+
     <div class="main">
     <a href="index2.html" class="btn"><input type="submit" value="Lets get started"></a>
     </div>
