--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
   <body>
     <video id="video" width="720" height="560" autoplay muted></video>
     <div class="contain">
-      <a href="index3.html" class="btn"><input type="submit" value="Lets order"></a>
+      <!-- <a href="index3.html" class="btn"><input type="submit" value="Lets order"></a> -->
     </div>
 
     <script scr="https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js"></script>
