--- a/happy.html
+++ b/happy.html
@@ -99,12 +99,9 @@
     </div> -->
 
     <form action="" class="login-form">
-        <h3>login now</h3>
-        <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
-        <p>forget your password <a href="#">click here</a></p>
-        <p>don't have an account <a href="#">create now</a></p>
-        <input type="submit" value="login now" class="btn">
+        <h3>Hello!!</h3>
+        <a id="userlink" class="nav-link" href="#"><h2>Username</h2></a>
+        <a id="signoutlink" class="nav-link" href="login.html"><h2>Sign out</h2></a>
     </form>
 
 </header>
@@ -116,8 +113,8 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>Welcome to <span>BusyBean</span></h3>
-        <p>So what are you gonna order today to make you happy?</p>
+        <h3 id="hh"></h3>
+        <p>Choose to be happy!! We have suggestions ready for you!!</p>
         <br>
         <a href="#features" class="btn">Order now</a>
     </div>
@@ -611,6 +608,6 @@
 <script src="js/script1.js"></script>
 <script src="js/cartscript.js"></script>
 <script src="js/search.js"></script>
-
+<script src="js/user.js"></script>
 </body>
 </html>
