--- a/register.html
+++ b/register.html
@@ -26,13 +26,8 @@
 </head>
 <body>
 
-    <!-- <div class="main">
-    <a href="index2.html" class="btn"><input type="submit" value="Lets get started"></a> -->
-
-
-
     <div class="mb-5">
-        <h3 class="mb-3">Lets start afresh</h3>
+        <h3 class="mb-3">Lets start afresh!!</h3>
         <input type="text" placeholder="Fullname" id="nameInp" class="form-control mb-3">
         <input type="text" placeholder="email" id="emailInp" class="form-control mb-3">
         <input type="text" placeholder="Username" id="userInp" class="form-control mb-3">
