--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 <body>
 
     <div class="mb-5">
-        <h3 class="mb-3">Lets get in</h3>
+        <h3 class="mb-3" style="color: orange;">Lets get in!</h3>
         <input type="text" placeholder="Username" id="userInp" class="form-control mb-3">
         <input type="password" placeholder="Password" id="passInp" class="form-control mb-3">
         <div class="custom-control custom-switch mb-3">
