--- a/neutral.html
+++ b/neutral.html
@@ -490,8 +490,8 @@
                 </div>
                 <h3>Fun in me</h3>
                 <p>My weakness have always been food and men- in the order.</p>
-                <button class="btn" id="btw">Like it</button>
-                <h1 id="like"></h1>
+                <button class="btn btw" id="btw">Like it</button>
+                <h1 class="bdab" id="like"></h1>
 
             </div>
         </div>
@@ -505,8 +505,8 @@
                 </div>
                 <h3>Inspiring Me</h3>
                 <p>Food is symbolic of love when words are inadequate</p>
-                <button class="btn" id="btw">Like it</button>
-                <h1 id="like"></h1>
+                <button class="btn btw" id="btw">Like it</button>
+                <h1 class="bdab" id="like"></h1>
             </div>
         </div>
 
@@ -519,8 +519,8 @@
                 </div>
                 <h3>Happy Me</h3>
                 <p>When you eat food with your family and friends, it always tastes better!</p>
-                <button class="btn" id="btw">Like it</button>
-                <h1 id="like"></h1>
+                <button class="btn btw" id="btw">Like it</button>
+                <h1 class="bdab" id="like"></h1>
             </div>
         </div>
 
