--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
 <body>
 
     <div class="mb-5">
-        <h3 class="mb-3">Lets start afresh!!</h3>
+        <h3 class="mb-3" style="color: orange;">Lets start afresh!!</h3>
         <input type="text" placeholder="Fullname" id="nameInp" class="form-control mb-3">
         <input type="text" placeholder="email" id="emailInp" class="form-control mb-3">
         <input type="text" placeholder="Username" id="userInp" class="form-control mb-3">
