--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>face reconition</title>
     <script defer src="face-api.min.js"></script>
-    <script defer src="script.js"></script>
+    <script defer src="js/facescript.js"></script>
   
     <style>
       body {
