--- a/placed.html
+++ b/placed.html
@@ -9,6 +9,7 @@
         div {  margin:0;
                padding:0;
                text-align: center;
+               color: orange;
                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                position: absolute;
                top:50%;
