--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
             <label class="custom-control-label" for="customSwitch1">Keep me logged in</label>
           </div>
         <button type ="text" id ="sub_btn" class="btn btn-outline-primary mb-3 w-100">Sign In</button>
-        <a href="register.html" class="badge badge-secondary py-1 w-100">Want to Create a new account?</a>
+        <a href="index.html" class="badge badge-secondary py-1 w-100">Want to Create a new account?</a>
     </div>
 
 
